--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^8.28.0",
+    "@sentry/vite-plugin": "^2.22.4",
     "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
+    "react-router-dom": "^6.26.1",
+    "react-transition-group": "^4.4.5",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
